--- a/cloudformation/jenkins.yml
+++ b/cloudformation/jenkins.yml
@@ -13,6 +13,10 @@ Resources:
           CidrIp: "0.0.0.0/0"
           FromPort: 443
           ToPort: 443
+        - IpProtocol: tcp
+          CidrIp: "0.0.0.0/0"
+          FromPort: 22
+          ToPort: 22
   JenkinsInstance:
     Type: "AWS::EC2::Instance"
     Properties:
