--- a/cloudformation/jenkins.yml
+++ b/cloudformation/jenkins.yml
@@ -60,13 +60,13 @@ Resources:
             - "\n"
             - - "#!/bin/bash"
               - "apt update && apt upgrade -y"
-              - "apt install git python-pip -y"
-              - "pip install awscli --upgrade --user"
+              - "apt install git awscli -y"
               - Fn::Join:
                 - " "
                 - - "aws s3 cp"
                   - !Ref DeployKeyLocation
                   - "~/.ssh/deploy_key"
               - "chmod 400 ~/.ssh/deploy_key"
+              - "eval \"$(ssh-agent -s)\""
               - "ssh-add ~/.ssh/deploy_key"
               - "git clone git@github.com:danielc2013/jenkins-quick-deploy"
