--- a/cloudformation/jenkins.yml
+++ b/cloudformation/jenkins.yml
@@ -72,13 +72,13 @@ Resources:
             - - "#!/bin/bash"
               - "apt update && DEBIAN_FRONTEND=noninteractive apt upgrade -y"
               - "apt install git awscli -y"
-              - "umask 077"
+              - "U_MASK=$(umask); umask 077"
               - Fn::Join:
                 - " "
                 - - "aws s3 cp"
                   - !Ref DeployKeyLocation
                   - "~/.ssh/deploy_key"
-              - "umask 000"
+              - "umask $U_MASK"
               - "eval \"$(ssh-agent -s)\""
               - "ssh-add ~/.ssh/deploy_key"
               - Fn::Join:
