--- a/cloudformation/jenkins.yml
+++ b/cloudformation/jenkins.yml
@@ -11,6 +11,7 @@ Parameters:
     Type: "AWS::EC2::KeyPair::KeyName"
   DeployKeyLocation:  
     Type: String
+    AllowedPattern: "^s3://"
   GitRepo:
     Type: String
     Default: "git@github.com:danielc2013/jenkins-quick-deploy"
@@ -82,6 +83,6 @@ Resources:
               - "eval \"$(ssh-agent -s)\""
               - "ssh-add ~/.ssh/deploy_key"
               - Fn::Join:
-              - - " "
+                - " "
                 - - "git clone"
                   - !Ref GitRepo
