Add path to git clone

--- a/cloudformation/jenkins.yml
+++ b/cloudformation/jenkins.yml
@@ -85,3 +85,4 @@ Resources:
                 - " "
                 - - "git clone"
                   - !Ref GitRepo
+                  - "/home/ubuntu/quick-deploy"
