--- a/cloudformation/jenkins.yml
+++ b/cloudformation/jenkins.yml
@@ -78,6 +78,7 @@ Resources:
           Fn::Join:
             - "\n"
             - - "#!/bin/bash"
+              - "export HOME=/home/ubuntu"
               - "apt update && DEBIAN_FRONTEND=noninteractive apt upgrade -y"
               - "apt install python-pip git awscli -y"
               - "pip install https://s3.amazonaws.com/cloudformation-examples/aws-cfn-bootstrap-latest.tar.gz"
