Add cfn-signal script to UserData

--- a/cloudformation/jenkins.yml
+++ b/cloudformation/jenkins.yml
@@ -107,3 +107,9 @@ Resources:
               - "export HOME=/home/ubuntu"
               - "berks vendor /tmp/quick_start -b /home/ubuntu/quick-deploy/bootstrap/Berksfile"
               - "chef-solo -c /home/ubuntu/solo.rb -j /home/ubuntu/node.json"
+              - Fn::Join:
+                - " "
+                - - "cfn-signal -e $? " --stack
+                  - !Ref "AWS::StackName"
+                  - "--resource JenkinsInstance --region"
+                  - !Ref "AWS::Region"
