--- a/cloudformation/jenkins.yml
+++ b/cloudformation/jenkins.yml
@@ -73,6 +73,9 @@ Resources:
         - !Ref "JenkinsSG"
       KeyName: !Ref "KeyPair"
       IamInstanceProfile: !Ref JenkinsInstanceProfile
+      CreationPolicy:
+        ResourceSignal:    
+          Timeout: "PT10M"
       UserData:
         Fn::Base64:
           Fn::Join:
