--- a/bootstrap/.kitchen.yml
+++ b/bootstrap/.kitchen.yml
@@ -8,13 +8,13 @@ provisioner:
   # For example:
   #   always_update_cookbooks: <%= !ENV['CI'] %>
   always_update_cookbooks: true
-
+  client_rb:
+    chef_license: accept
 verifier:
   name: inspec
 
 platforms:
   - name: ubuntu-16.04
-  - name: centos-7
 
 suites:
   - name: default
